[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/levels/Level.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levels/Level2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/components/Player.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.210224, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 4.13855e+16 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}

[node name="Level" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )
levels = [ ExtResource( 2 ), ExtResource( 3 ) ]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 6.74969, -11.2503 )

[node name="FadeOut" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
[connection signal="asleep" from="Player" to="." method="_on_Player_asleep"]
[connection signal="energy_changed" from="Player" to="." method="_on_Player_energy_changed"]
[connection signal="screen_entered" from="Player" to="." method="_on_Player_screen_entered"]
[connection signal="screen_exited" from="Player" to="." method="_on_Player_screen_exited"]
